# faller222.github.io

./: README.md  deploy.sh
CV-gen/: #notes  #notes.md  nuxt.config.ts  package-lock.json  package.json  script.sh
CV-gen/components/: optionalDiv.vue  printBtn.vue  viewer.vue
CV-gen/data/: faller.json  new.json
CV-gen/layouts/: default.vue
STM/: Lineas.txt  prompt.txt
Sovelo/: #notes  README.md  dogApi.js  dogController.js  dogController.test.js  openapi.json  package-lock.json  package.json  test.http
benchmark-sha/: README.md  docker-compose.yml
benchmark-sha/rust/: Cargo.toml  Dockerfile
benchmark-sha/rust/src/: main.rs
consular/: #notes  check.js  package-lock.json  package.json
crowder/: background.html
docs/: 200.html  404.html  CNAME  index.html  script.js  sw.js
holehe/: #notes.md  Dockerfile  README.md
keepActive/: #notes  env.js  index.js  package-lock.json  package.json  utils.js
killBill/: Dockerfile  docker-compose.yml
linkedin/: Dialecto  Entrada  Prompt  Salida  Script.js  scrTMp.js
recruting/: regexp  tmp
rutina/: README.md  entreno.txt  rutina.md  rutina.txt  skincare.txt
showCursor/: todo.txt
smb/: .gitignore  DDL.sql  DEPLOY.md  README-DB.md  README.md  active.js  deploy.sh  docker-compose.yml  navigationTest.js  package-lock.json  package.json  server.js  testLogin.js  testLogin.js.original  todo.md
soluevo/: #notes  dogController.test.js  index.js  test.http  testExpressPipe.js  testKoaPipe.js
src/: README.md  deploy.sh  index.html  nuxt.config.js  package-lock.json  package.json  style.css  test.html
(+481 files in other folders)
