[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = { version = "2.0", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
num_cpus = "1.13"
